--- a/token-trek/src/index.css
+++ b/token-trek/src/index.css
@@ -30,6 +30,13 @@ body {
   min-height: 100vh;
 }
 
+.hud {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 1.2em;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
